--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -521,6 +521,9 @@ video {
 .flex {
   display: flex;
 }
+.grid {
+  display: grid;
+}
 .h-2 {
   height: 0.5rem;
 }
@@ -541,6 +544,9 @@ video {
 }
 .w-full {
   width: 100%;
+}
+.max-w-screen-lg {
+  max-width: 1024px;
 }
 .max-w-screen-md {
   max-width: 768px;
@@ -582,6 +588,13 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+.text-center {
+  text-align: center;
+}
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 .text-sm {
   font-size: 0.875rem;
