--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -512,6 +512,9 @@ video {
 .mb-4 {
   margin-bottom: 1rem;
 }
+.mb-8 {
+  margin-bottom: 2rem;
+}
 .mr-3 {
   margin-right: 0.75rem;
 }
@@ -524,11 +527,20 @@ video {
 .grid {
   display: grid;
 }
+.h-16 {
+  height: 4rem;
+}
 .h-2 {
   height: 0.5rem;
 }
+.h-6 {
+  height: 1.5rem;
+}
 .h-8 {
   height: 2rem;
+}
+.h-full {
+  height: 100%;
 }
 .h-screen {
   height: 100vh;
@@ -538,6 +550,9 @@ video {
 }
 .w-3\/5 {
   width: 60%;
+}
+.w-6 {
+  width: 1.5rem;
 }
 .w-6\/12 {
   width: 50%;
@@ -551,6 +566,9 @@ video {
 .max-w-screen-md {
   max-width: 768px;
 }
+.cursor-pointer {
+  cursor: pointer;
+}
 .flex-col {
   flex-direction: column;
 }
@@ -560,11 +578,17 @@ video {
 .justify-center {
   justify-content: center;
 }
+.justify-between {
+  justify-content: space-between;
+}
 .rounded {
   border-radius: 0.25rem;
 }
 .border {
   border-width: 1px;
+}
+.border-b {
+  border-bottom-width: 1px;
 }
 .border-gray-primary {
   --tw-border-opacity: 1;
@@ -584,6 +608,10 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 .py-5 {
   padding-top: 1.25rem;
